* Improve javadoc and add unit tests